welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:4: error: ')' expected but '(' found.
	(getCouleurSol():Color())
                              ^Program:4: error: ';' expected but ')' found.
	(getCouleurSol():Color())
                                ^